<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".ui.CarAddingViewActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/crdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/cardview_light_background"
        app:cardCornerRadius="18dp"
        android:elevation="5dp"
        >

    <LinearLayout
        android:id="@+id/llCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Brand" />
        <EditText
            android:id="@+id/etModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Model" />

        <LinearLayout
            android:id="@+id/llDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSelectedDate"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/Date" />

            <Button
                android:id="@+id/btnDatePicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_margin="10dp"
                android:background="@drawable/shape_btn_rounded"
                android:gravity="center"
                android:text="@string/btn_text_select_date"
                android:textSize="@dimen/item_car_description_textSize"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/etReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Registration" />

    </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSaveCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_btn_rounded"
        android:gravity="center"
        android:text="@string/btn_text_save"
        android:textSize="@dimen/car_description_textSize"
        />


</LinearLayout>