<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <import type="android.graphics.Color"/> />
        <variable
            name="carDetailsViewModel"
            type="sde.com.icar.viewmodel.CarDetailsViewModel" />
    </data>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background">



    <TextView
        android:id="@+id/txtCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Car"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/primary_text_color"
        android:gravity="center"
        ></TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/cardview_light_background"
        app:cardCornerRadius="18dp"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:gravity="center_vertical"
            android:background="@drawable/shape_item_rounded"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDetailsBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/car_description_textSize"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@{String.valueOf(carDetailsViewModel.car.brand)}"
                    tools:text="@string/Brand" />

                <TextView
                    android:id="@+id/tvDetailsModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text_color"
                    android:gravity="center"
                    android:textSize="@dimen/car_description_textSize"
                    android:text="@{String.valueOf(carDetailsViewModel.car.model)}"
                    tools:text="@string/Model" />
                <TextView
                    android:id="@+id/tvDetailsRegNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text_color"
                    android:gravity="center"
                    android:textSize="@dimen/car_description_textSize"
                    android:text="@{String.valueOf(carDetailsViewModel.car.registration)}"
                    tools:text="@string/RegNum" />
                <ImageView
                    android:id="@+id/ivDetailsColor"
                    android:layout_width="@dimen/item_car_image_size"
                    android:layout_height="@dimen/item_car_image_size"
                    android:layout_marginStart="@dimen/item_car_main_marginStartEnd"
                    android:background="@drawable/shape_iv_border"
                    android:src="@{Color.parseColor(carDetailsViewModel.car.color)}"
                    android:layout_gravity="center"
                    android:padding="@dimen/item_car_image_padding"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvDetailsOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Owner"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/primary_text_color"
        android:gravity="center"
        ></TextView>
    <androidx.cardview.widget.CardView
        android:id="@+id/crdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/cardview_light_background"
        app:cardCornerRadius="18dp"
        android:elevation="5dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_item_rounded"
            android:orientation="vertical"
            android:padding="15dp"
            >
            <TextView
                android:id="@+id/tvDetailsOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/car_description_textSize"
                android:text="@{String.valueOf(carDetailsViewModel.person.first_name)}"
                android:textStyle="bold"
                android:textColor="@color/primary_text_color"
                tools:text="@string/name"
                ></TextView>
            <TextView
                android:id="@+id/tvDetailsOwnerLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/car_description_textSize"
                android:text="@{String.valueOf(carDetailsViewModel.person.last_name)}"
                android:textStyle="bold"
                android:textColor="@color/primary_text_color"
                tools:text="@string/last_name"

                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
</layout>