<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/item_member_marginBottom"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_car_main_marginStartEnd"
        android:layout_marginEnd="@dimen/item_car_main_marginStartEnd"
        app:cardBackgroundColor="@color/image_no_color"
        app:cardCornerRadius="@dimen/item_car_corner_radius"
        app:cardElevation="@dimen/item_car_cv_elevation"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/shape_item_rounded"
            android:orientation="horizontal"
            >

                <ImageView
                    android:id="@+id/ivColor"
                    android:layout_width="@dimen/item_car_image_size"
                    android:layout_height="@dimen/item_car_image_size"
                    android:layout_marginStart="@dimen/item_car_main_marginStartEnd"
                    android:background="@drawable/shape_iv_border"
                    android:src="@color/colorPrimary"
                    android:padding="@dimen/item_car_image_padding"
                    />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_car_ll_marginStart"
                android:layout_marginEnd="@dimen/item_car_ll_marginEnd"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/item_car_title_textSize"
                    android:textStyle="bold"
                    tools:text="@string/Brand" />

                <TextView
                    android:id="@+id/tvModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/item_car_description_textSize"
                    tools:text="@string/Model" />
                <TextView
                    android:id="@+id/tvRegNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/item_car_description_textSize"
                    tools:text="@string/RegNum" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
